# BaseMcpServer

./: .gitignore  CONFIG_STANDARDIZATION.md  FINAL_MCP_DEVELOPMENT_GUIDE.md  HEXAGONAL_BOILERPLATE_ANALYSIS.md  HEXAGONAL_DRY_CLEANUP_PLAN.md  HEXAGONAL_MCP_DEVELOPMENT_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  JIRA_HELPER_RESTRUCTURING_PLAN.md  MCP_ADAPTER_DESIGN_ANALYSIS.md  MCP_ADAPTER_FINAL_RECOMMENDATIONS.md  MCP_ADAPTER_IMPLEMENTATION_CHECKLIST.md  MCP_BULK_TOOL_REGISTRATION_DISCOVERY.md  MCP_CLINE_COMPATIBILITY_GUIDE.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_MANAGER_HELP_CONSOLIDATION_PLAN.md  MCP_MULTI_SERVER_DEPLOYMENT_PLAN.md  MCP_SDK_ARCHITECTURE_ANALYSIS.md  MCP_STREAMABLE_HTTP_GUIDE.md  MCP_TOOL_METADATA_BEST_PRACTICES.md  QUICKSTART.md  README.md  REMOTE_MCP_SERVER_CONFIG.md  ULTRA_SIMPLIFIED_MCP_GUIDE.md  YAML_MIGRATION_CHECKLIST.md  build.sh  configure_vscode.py  current_tasks.md  debugging_notes.md  design_decisions.md  install_example.py  jira_info.md  production_test.md  requirements-base.txt  test_bulk_registration.py  test_complete_direct_mcp.py  test_complete_pattern.py  test_decouple_parsing.py  test_direct_use_case_mcp.py  test_mcpservercreator.py  test_metadata_handling.py  (+1 more)
servers/jira-helper/: .env.example  ARCHITECTURAL_REFACTORING_CHECKLIST.md  BUG_change_issue_assignee.md  CONFLUENCE_INTEGRATION_VERIFICATION.md  DEPLOYMENT_CHECKLIST.md  Dockerfile.http  ENHANCEMENTS.md  ENHANCEMENT_PLANNING_CHECKLIST.md  EXTENSION_GUIDE.md  HEXAGONAL_REFACTORING_CHECKLIST.md  IMPLEMENTATION_PLAN.md  MCP_ADAPTER_REFACTORING_COMPLETE.md  MCP_TOOL_OPTIMIZATION_ANALYSIS.md  PHASE_1_COMPLETE_SUMMARY.md  PHASE_1_IMPLEMENTATION_GUIDE.md  PHASE_1_PROGRESS_SUMMARY.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_3_COMPLETE_SUMMARY.md  README.md  REFACTORING_QUICK_REFERENCE.md  SEARCH_REFACTORING_CHECKLIST.md  TESTING.md  TRILLIANT_COLLABORATION_CHECKLIST.md  VALIDATION_SIMPLIFICATION_CHECKLIST.md  VALIDATION_SIMPLIFICATION_COMPLETE.md  config.yaml.example  debug_decorators.py  debug_trace_true_bug.py  debug_true_issue.py  decode_workflow_graph.py  docker-compose.http.yml  migration_checklist.md  proof_of_concept_matplotlib.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  run_tests.py  setup.sh  (+18 more)
servers/jira-helper/.clinerules/: development_process.md
servers/jira-helper/docs/: CLINE_SAFE_OUTPUT_IMPLEMENTATION_CHECKLIST.md  README.md  requirements-cline-safe-output.md
servers/jira-helper/docs/architecture/: cline-safe-output.md  hexagonal-design.md  mcp-resource-system.md  search-system.md
servers/jira-helper/docs/archive/: CLINE_COMPATIBILITY_DESIGN.md  DECORATORS_FIXED_SUCCESS.md  DOCKER_DEPLOYMENT_SUCCESS.md  DUAL_ADAPTER_ARCHITECTURE.md  SEARCH_REFACTORING_CHECKLIST.md
servers/jira-helper/docs/developer/: adding-features.md  adding-use-cases.md  confluence-implementation-checklist.md
servers/jira-helper/docs/user/: available-tools.md  getting-started.md
servers/jira-helper/src/: __init__.py  config.py  exceptions.py  http_main.py  jira_client.py  main.py  output_sanitizer.py  server.py  streamable_main.py  tool_config.py
servers/jira-helper/src/adapters/: __init__.py  http_adapter.py  mcp_adapter.py  mcp_adapter_old.py  mcp_adapter_old_backup.py  mcp_bulk_registration.py  mcp_result_adapter.py  mcp_tool_config.py
servers/jira-helper/src/application/: __init__.py  base_use_case.py  error_mappers.py  file_use_cases.py  services.py  use_cases.py  validation.py  validators.py  validators_backup.py
servers/jira-helper/src/domain/: __init__.py  base.py  base_service.py  configuration_service.py  enums.py  exceptions.py  file_models.py  jira_service.py  jql_builder.py  models.py  models_simplified.py  ports.py  results.py  search_service.py  services.py  shared_data.py  type_guards.py  value_objects.py
servers/jira-helper/src/infrastructure/: __init__.py  atlassian_api_adapter.py  atlassian_confluence_adapter.py  atlassian_file_adapter.py  atlassian_link_adapter.py  atlassian_repository.py  atlassian_search_adapter.py  atlassian_time_adapter.py  atlassian_update_adapter.py  base_adapter.py  config_adapter.py  converters.py  file_system_adapter.py  file_validation_adapter.py  graph_generator.py  jira_api_repository.py  jira_client.py  jira_client_factory.py  jira_time_tracking_adapter.py
servers/jira-helper/src/tests/: __init__.py  test_architecture.py  test_domain.py  test_integration.py  test_issue_link_model.py  test_issue_linking_integration.py  (+5 more)
servers/jira-helper/tests/: __init__.py  test_tool_config.py  test_validation.py
servers/loadbearing-youtube/: .gitignore  README.md  config.yaml.example  pyproject.toml
servers/loadbearing-youtube/src/: config.py  main.py  tool_config.py
servers/loadbearing-youtube/tests/: test_tools.py
servers/mcpservercreator/: README.md  pyproject.toml  requirements.txt
servers/mcpservercreator/src/: __init__.py  config.py  main.py  server.py  tool_config.py
servers/template/: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt  run.sh
servers/template/docker/: Dockerfile
servers/template/src/: __init__.py  config.py  main.py  server.py  tool_config.py
servers/template/tests/: test_tools.py
servers/uhes60/: config.yaml.example  pyproject.toml  requirements.txt
servers/uhes60/resources/: greetings.txt
servers/uhes60/src/: main.py
servers/uhes60/tests/: test_domain.py
servers/worldcontext/: API_SETUP.md  BULK_REGISTRATION_IMPLEMENTATION.md  config.yaml.example  pyproject.toml  requirements.txt  test_cli.py
servers/worldcontext/src/: __init__.py  bulk_registration.py  config.py  main.py  server.py  tool_config.py
utils/mcp_manager/: CLAUDE_CODE_SUPPORT_IMPLEMENTATION.md  DEVELOPMENT_CHECKLIST.md  FUNCTIONAL_TEST_PLAN.md  LOGGING_ARCHITECTURE_PLAN.md  MCP_MANAGER_2.0_ARCHITECTURE.md  NAMING_STANDARDIZATION_CHECKLIST.md  PIPX_IMPLEMENTATION_CHECKLIST.md  README.md  REMOVAL_COMMANDS_DESIGN.md  REMOVAL_IMPLEMENTATION_CHECKLIST.md  TEST_EXECUTION_GUIDE.md  pyproject.toml  test_removal_functionality.py
utils/mcp_manager/test-echo-server/: README.md  pyproject.toml
(+248 files in other folders)
