[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-helper"
version = "1.0.0"
description = "A Jira helper MCP server"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "MCP Server Team", email = "example@example.com"},
]
dependencies = [
    "python-dotenv>=1.1.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "sse-starlette>=3.0.2",
    "rich>=14.1.0",
    "typer>=0.16.1",
    "atlassian-python-api>=4.0.7",
    "PyYAML>=6.0.2",
    "mcp>=1.13.1",
    "mcp-commons>=1.0.0"
]

[project.scripts]
jira-helper = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
