[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-helper"
version = "1.1.0"
description = "A Jira helper MCP server"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "MCP Server Team", email = "example@example.com"},
]
dependencies = [
    # Core MCP dependencies
    "mcp>=1.13.1",
    "mcp-commons>=1.0.0",
    
    # Jira integration 
    "atlassian-python-api>=4.0.7",
    
    # HTTP server dependencies (unified from both files)
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "starlette>=0.41.0",
    "sse-starlette>=3.0.2",
    
    # Configuration and utilities
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "PyYAML>=6.0.2",
    "rich>=14.1.0",
    "typer>=0.16.1",
    
    # Graph visualization dependencies (GraphViz replacement!)
    "matplotlib>=3.8.0",
    "networkx>=3.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-mock>=3.10.0"
]

[project.scripts]
jira-helper = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
