[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpservercreator"
version = "1.3.0"
description = "MCP Server Creator - Dynamically creates and installs MCP servers with automatic Cline registration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "MCP Server Team", email = "example@example.com"},
]
dependencies = [
    "mcp>=1.27.0",
    "mcp-commons>=2.1.1",
    "virtualenv>=21.2.0",
    "rich>=14.3.3",
    "pydantic-settings>=2.13.1",
    "python-decouple>=3.8",
    "uvicorn>=0.44.0",
    "typer>=0.24.1"
]

[project.scripts]
mcpservercreator = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "server", "tool_config"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
