[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcontext-mcp-server"
version = "1.1.0"
description = "WorldContext MCP Server - Provides current context information including date/time, stock market overview, and news headlines"
authors = [
    {name = "MCP Server Team", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.27.0",
    "mcp-commons>=2.1.1",
    "httpx>=0.28.1",
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/modelcontextprotocol/servers"
Repository = "https://github.com/modelcontextprotocol/servers"
Documentation = "https://github.com/modelcontextprotocol/servers/tree/main/src/worldcontext"

[project.scripts]
worldcontext = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "tool_config"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"