[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-manager"
version = "0.3.1"
description = "Comprehensive manager for MCP servers"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "MCP Server Team", email = "example@example.com"},
]
dependencies = [
    "typer>=0.16.1",           # CLI framework
    "pydantic>=2.11.7",       # Data validation
    "rich>=14.1.0",           # Rich text and formatting
    "virtualenv>=20.34.0",    # Virtual environment management
    "jinja2>=3.1.6",          # Template rendering
    "httpx>=0.28.1",          # HTTP client for testing connections
    "pyyaml>=6.0",            # YAML parsing
    "psutil>=5.9.0",          # Process monitoring
]

[project.scripts]
mcp-manager = "mcp_manager.cli:app"
mcpmanager = "mcp_manager.cli:app"  # Backward compatibility alias

[tool.setuptools]
packages = [
    "mcp_manager",
    "mcp_manager.cli", 
    "mcp_manager.cli.commands",
    "mcp_manager.cli.common",
    "mcp_manager.core",
    "mcp_manager.commands"
]
package-dir = {"" = "src"}
include-package-data = true
