[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-manager"
version = "1.5.1"
description = "Comprehensive manager for MCP servers"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Larry Dawson", email = "larry.dawson@gmail.com"},
]
dependencies = [
    "typer>=0.24.1",           # CLI framework
    "pydantic>=2.12.5",       # Data validation
    "rich>=14.3.3",           # Rich text and formatting
    "pyyaml>=6.0.3",          # YAML parsing
]

[project.scripts]
mcp-manager = "mcp_manager.cli:app"
mcpmanager = "mcp_manager.cli:app"  # Backward compatibility alias

[tool.setuptools]
packages = [
    "mcp_manager",
    "mcp_manager.cli", 
    "mcp_manager.cli.commands",
    "mcp_manager.cli.common",
    "mcp_manager.core",
]
package-dir = {"" = "src"}
include-package-data = true
